Add support for SVG thumbnails/previews.

--- a/mediagoblin_svg/config_spec.ini
+++ b/mediagoblin_svg/config_spec.ini
@@ -1,3 +1,5 @@
 [plugin_spec]
-# serve SVG as <img> directly instead of using the rendered version
-serve_img = boolean(default=False)
+# use svg for thumbnails - not recommended for the moment
+svg_thumbnails = boolean(default=False)
+# use svg for preview - not recommended for the moment
+svg_previews = boolean(default=False)
